--- a/components/ng表单处理/ngform.html
+++ b/components/ng表单处理/ngform.html
@@ -17,6 +17,11 @@
                 <label for="username">username</label>
                 <input type="text" class="form-control" id="username" name="username" ng-model="ngformData.usename" ng-minlength="6" placeholder="username" required />
                 <span class="toast" ng-if="ngform.username.$dirty && ngform.username.$invalid">最少6个字符<i class="arrow-down"></i></span>
+                <!--
+                    ngform为form标签的name属性，username是为输入框的name属性，
+                    ngform.username.$dirty 该控件被修改过
+                    ngform.username.$invalid 该控件数据无效（ng-minlength 和 required限制）
+                -->
             </div>
             <!--输入框 password-->
             <div class="form-group">
@@ -30,6 +35,10 @@
                 <input type="tel" class="form-control" id="tel" name="tel" ng-model="ngformData.tel" maxlength="11" ng-pattern="/^(13[0-9]|15[012356789]|17[678]|18[0-9]|14[57])[0-9]{8}$/" placeholder="tel" required />
                 <span class="toast" ng-if="ngform.tel.$dirty && ngform.tel.$invalid">手机号码格式错误<i class="arrow-down"></i></span>
             </div>
+            <!--
+                ng-pattern 校验正则表达式
+                maxlength 为HTML的属性
+            -->
             <!--输入框 remark-->
             <div class="form-group">
                 <label for="remark">remark</label>
@@ -45,6 +54,11 @@
                 <div class="" ng-bind="'点选的id为: ' + ngformData.selectid"></div>
                 <div class="" ng-bind="'点选的name为: ' + ngformData.selectname"></div>
             </div>
+            <!--
+                ng-repeat 建议后面加上track by $index，可以解决重复数据遍历的错误
+                $index 是序列号
+                ng-bind 绑定数据，可以避免{{}}在刷新页面过程中闪现一下“{{}}”
+            -->
             <!--单选框 -->
             <div class="checkbox row">
                 <h5 class="text-center">选择一个</h5>
@@ -65,6 +79,9 @@
             <div class="form-group">
                 <button type="button" class="btn btn-primary btn-block" ng-click="submit()" ng-disabled="ngform.$invalid || ngformData.selectid.length === 0">Submit</button>
             </div>
+            <!--
+                ngform.$invalid 表单里面的控件校验有误
+            -->
         </form>
     </div>
     <script type="text/javascript" src="../../plugins/AngularJS/angular.min.js"></script>
