--- a/components/ng实例/index.html
+++ b/components/ng实例/index.html
@@ -10,6 +10,10 @@
 </head>
 <body ng-controller="indexController">
     <div class="container" ui-view></div>
+    <!-- 
+        ui-view，嵌套视图
+        路由上设置的first，second...内容将嵌套在ui-view所在的标签内
+    -->
     <script src="js/common.js"></script>
     <script src="../../plugins/AngularJS/angular.min.js"></script>
     <script src="../../plugins/AngularJS/angular-ui-router.min.js"></script>
