--- a/components/ng实例/index.html
+++ b/components/ng实例/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-controller="indexController">
     <div class="container" ui-view></div>
-    <!-- 
+    <!--
         ui-view，嵌套视图
         路由上设置的first，second...内容将嵌套在ui-view所在的标签内
     -->
@@ -19,5 +19,13 @@
     <script src="../../plugins/AngularJS/angular-ui-router.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/controller.js"></script>
+    <script src="js/directive.js"></script>
+
+    <!-- 遮罩层指令模板 -->
+    <script type="text/ng-template" id="maskerLayer.html">
+        <div class="masker">
+            <img src="../../images/ng实例/icon-close.png" alt="关闭png" ng-click="close()" />
+        </div>
+    </script>
 </body>
 </html>
