添加vue的一些代码（未完成）； 添加ng动态select代码（未完成）； 添加es6的一些代码（未完成）；

--- a/components/vue入门/index.html
+++ b/components/vue入门/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="test01/test01.html">test01</a>
     <a href="router/router01.html">router01</a>
+    <a href="component/test01/test01.html">component-test01</a>
 </body>
 </html>
