部分es6代码；下拉框ios箭头样式

--- a/components/ES6/index.html
+++ b/components/ES6/index.html
@@ -9,5 +9,6 @@
     <a href="解构赋值/解构赋值.html">变量的解构赋值</a><br />
     <a href="symbol/symbol.html">symbol</a><br />
     <a href="promise/promise.html">promise</a><br />
+    <a href="箭头函数/arrow.html">箭头函数</a><br />
 </body>
 </html>
