--- a/components/下拉框样式/select.html
+++ b/components/下拉框样式/select.html
@@ -31,5 +31,7 @@
         </select>
         <i class="arrow-down"></i>
     </div>
+    <p>IOS系统的button,input,select,radio,checkbox等标签都有自带的样式去掉的话</p>
+    <p>-webkit-appearance:none;appearance:none;outline:none;-webkit-tap-highlight-color:rgba(0,0,0,0);</p>
 </body>
 </html>
