添加promise在循环里处理多个异步请求例子；添加generator简单例子

--- a/components/ES6/index.html
+++ b/components/ES6/index.html
@@ -10,5 +10,6 @@
     <a href="symbol/symbol.html">symbol</a><br />
     <a href="promise/promise.html">promise</a><br />
     <a href="箭头函数/arrow.html">箭头函数</a><br />
+    <a href="generator/generator.html">Generator</a><br />
 </body>
 </html>
