--- a/components/ES6/解构赋值/解构赋值.html
+++ b/components/ES6/解构赋值/解构赋值.html
@@ -5,7 +5,8 @@
     <title>变量的解构赋值</title>
 </head>
 <body>
-    <script type="text/javascript">
+    <script src="./test.js"></script>
+    <!-- <script type="text/javascript">
         /*
             变量的解构赋值总结：
             1、只要等号两边的模式相同，左边的变量就会被赋予对应的值；
@@ -204,6 +205,6 @@
         // ... do stuff
         };
         // 16.6、遍历Map结构
-    </script>
+    </script> -->
 </body>
 </html>
