圣杯布局，双飞翼布局，overflow的妙用，布局

--- a/components/canvas/邀请函/邀请函.html
+++ b/components/canvas/邀请函/邀请函.html
@@ -61,6 +61,6 @@
             <canvas width="200" height="200" id="thecanvas"></canvas>
         </div>
     </div>
-    <script src="./邀请函.js" crossorigin="anonymous"></script>
+    <script src="./邀请函.js"></script>
 </body>
 </html>
