--- a/components/css3动画/fade/fade.html
+++ b/components/css3动画/fade/fade.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <a href="javascript:;" id="animatedbar" class="animated fadeIn">
-            <img src="//tvax3.sinaimg.cn/crop.282.270.330.330.180/88bc99faly8fh2wtgehalj20p00p074l.jpg" />
+            <img src="http://tvax3.sinaimg.cn/crop.282.270.330.330.180/88bc99faly8fh2wtgehalj20p00p074l.jpg" />
         </a>
         <button class="btn btn-primary" id="toggleFade">toggleFade</button>
-        <script src="./../../plugins/jQuery/jquery-1.11.3.min.js"></script>
+        <script src="./../../../plugins/jQuery/jquery-1.11.3.min.js"></script>
         <script src="./fade.js"></script>
     </body>
 </html>
