--- a/components/vue/vuex.html
+++ b/components/vue/vuex.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>vuex</title>
 </head>
+
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <p>{{ count }}</p>
+        <p>
+            <button @click="increment">+</button>
+            <button @click="decrement">-</button>
+        </p>
+    </div>
     <script src="./assets/js/vue.js"></script>
     <script src="./assets/js/vuex.js"></script>
     <script>
@@ -16,31 +24,28 @@
                 count: 0
             },
             mutations: {
-                increment(state) {
-                    state.count++;
-                }
+                increment: state => state.count++,
+                decrement: state => state.count--
             }
         });
 
-        const Counter = {
-            template: `<div>{{ count }}</div>`,
+        new Vue({
+            el: '#app',
             computed: {
                 count() {
-                    return this.$store.state.count
+                    return store.state.count;
+                }
+            },
+            methods: {
+                increment() {
+                    store.commit('increment');
+                },
+                decrement() {
+                    store.commit('decrement');
                 }
             }
-        };
-        
-        const app = new Vue({
-            el: '#app',
-            store,
-            components: { Counter },
-            template: `
-                <div class="app">
-                    <counter></counter>    
-                </div>
-            `
         });
     </script>
 </body>
+
 </html>
